# mltemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plugin-metadata.json
.github/actions/: README.md
.github/actions/build-madronalib/: action.yml
.github/actions/build-mlvg/: action.yml
.github/actions/build-plugin/: action.yml
.github/actions/compress-artifacts/: action.yml
.github/actions/parse-workflow-trigger/: action.yml
.github/actions/setup-dependencies/: action.yml
.github/actions/upload-artifacts/: action.yml
.github/actions/validate-plugin/: action.yml
.github/workflows/: build-and-validate.yml
cmake/: CLAPHost.cmake  CLAPInfo.cmake  CLAPPlugin.cmake  CLAPTools.cmake  CLAPValidator.cmake  CLAPWrapper.cmake  DSPTests.cmake  FontEmbedding.cmake  README.md
docs/: CUSTOM_FONTS.md
fonts/: README.md
scripts/: .gitignore  build-vst3-testhost.sh  generate_entry_point.py  parse_metadata.py
scripts/github-actions/: parse_workflow_trigger.py  test_workflow_parser.py
src/: ChordGenerator-gui.cpp  ChordGenerator-gui.h  ChordGenerator.cpp  ChordGenerator.h  Oscilloscope-gui.cpp  Oscilloscope-gui.h  Oscilloscope.cpp  Oscilloscope.h  TanhSaturator-gui.cpp  TanhSaturator-gui.h  TanhSaturator.cpp  TanhSaturator.h  TapeHack-gui.cpp  TapeHack-gui.h  TapeHack.cpp  TapeHack.h  clap-stereo-effect-template-entry.cpp  clap-stereo-effect-template-gui.cpp  clap-stereo-effect-template-gui.h  clap-stereo-effect-template.cpp  clap-stereo-effect-template.h
src/dsp/: MLDSPWavetableGen.cpp  MLDSPWavetableGen.h  MLDSPWavetableGenTest.cpp
src/widgets/: LineWidget.cpp  LineWidget.h  OscilloscopeWidget.cpp  OscilloscopeWidget.h
